# job_goblin

./: .gitignore  main.py  pyproject.toml
intake_candidate_profile_service/: main.py  pyproject.toml
intake_job_profile_service/: CLAUDE.md  interview_agent_prompt.txt  main.py  pyproject.toml
job_scraper/: .gitignore  CLAUDE.md  alembic.ini  main.py  pyproject.toml  run_api.py
job_scraper/alembic/: env.py
job_scraper/alembic/versions/: 37d8d09409be_add_url_column_to_job_post_table.py  59ffee20774c_initial_migration_create_company_and_.py  e598cd96fac0_add_summarized_job_table.py  eff799bde6a3_add_job_page_table.py
job_scraper/chrome_extension/: README.md  manifest.json  popup.css  popup.html  popup.js
job_scraper/src/: .env.example
job_scraper/src/hoarder/: api_server.py  celery_app.py
job_scraper/src/hoarder/api/: job_collection.py
job_scraper/src/hoarder/models/: __init__.py  company.py  job_page.py  job_post.py  summarized_job.py
job_scraper/src/hoarder/repositories/: __init__.py  company.py  job_page.py  job_post.py  summarized_job.py
job_scraper/src/hoarder/schema/: job_collection.py
job_scraper/src/hoarder/services/: ai_service.py  job_page_service.py  job_service.py  scrape_job_webpage.py  scraper.py
job_scraper/src/hoarder/tasks/: __init__.py  job_processing.py
job_scraper/src/hoarder/utils/: database.py  settings.py
job_scraper/streamlit_app/: app.py
job_scraper/streamlit_app/pages/: manual_entry.py
job_scraper/test/scripts/: test_ai_summarization.py  test_celery.py  test_job_creation.py  test_redis.py  test_task_queue.py
(+4 files in other folders)
